<resources>
    <string name="app_name">FruitMarketClient</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="you_are_looking_for">You are looking for?</string>

    <!--下拉刷新菜单-->
    <string name="gs_pull_to_refresh">下拉刷新</string>
    <string name="gs_release_to_refresh">释放立即刷新</string>
    <string name="gs_refreshing">正在加载中</string>
    <string name="gs_refresh_succeed">刷新成功</string>
    <string name="gs_refresh_fail">刷新失败</string>
    <string name="gs_pullup_to_load">上拉加载更多</string>
    <string name="gs_release_to_load">释放立即加载</string>
    <string name="gs_loading">正在加载中</string>
    <string name="gs_load_succeed">加载成功</string>
    <string name="gs_load_fail">没有更多内容了</string>

    <string name="refresh_fail">未刷新成功，稍后再试试吧！</string>
    <string name="this_is_the_order_fragment">This is the order Fragment!</string>
    <string name="muffin_dresses">Muffin Dresses</string>
    <string name="cart_orders">Cart Orders</string>
    <string name="user_profile">User Profile</string>
    <string name="settings">Settings</string>
    <string name="angela_angel">Angela angel</string>
    <string name="cart">Cart</string>
    <string name="payment">Payment</string>
    <string name="sc">Commodity Detail</string>
    <string name="fruit_market">Fruit Market</string>
    <string name="search_a_item">Search a item.</string>
    <string name="go_to_cart">go to cart</string>
    <string name="elegant_pink_dress">Elegant Pink Dress</string>
    <string name="google">Google Web History (previously Google Search History) is a feature of Google Search and provided by Google, in which all search queries and results that a user clicks on are recorded. The feature is only available for users logged into a Google Account. The feature was renamed from Search History to Web History on April 19, 2007.[1] A user\'s Web History is used to personalize search results with the help of Google Personalized Search[2] and in Google Now.</string>
    <string name="description">Description</string>
    <string name="comments">Comments</string>
    <string name="gordon_rawe">Gordon Rawe</string>
    <string name="accept_system_notification">Accept System Notification</string>
    <string name="accept_activities_recommendations">Accept activities recommendations</string>
    <string name="version_updates">Version Updates</string>
    <string name="apps_recommendations">Apps Recommendations</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="logo">Logo</string>
    <string name="nick_name">Name</string>
    <string name="uuid">123e4567e89b12d3a456426655440000</string>
    <string name="user_id">Id</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="district">District</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="gordon_tongji_hotmail_com">gordon.tongji@hotmail.com</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="feedback">Feedback</string>
    <string name="color">Color</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="select_commodity_categories">Click to select commodity categories</string>
    <string name="select_the_category">Select the category</string>
    <string name="select_required_params">Select required params</string>
    <string name="there_is_no_orders_yet">There is no orders yet!</string>
    <string name="input_you_phone_here">Input you phone here</string>
    <string name="input_your_email_here">Input your email here</string>
    <string name="input_your_name_here">Input your name here</string>
    <string name="launcher_activity">launcher_activity</string>
    <string name="write_something">写点什么吧</string>
    <string name="nine_plus">九加工作室出品</string>
    <string name="title_hint">注意:标题为必填项</string>
</resources>
